<resources>
    <string name="app_name">TaPo24</string>
    <string name="app_name_long">TAryfikator POlicyjny24</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tapo24.pl</string>
    <string name="nav_header_subtitle">kontakt@tapo24.pl</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="info_version">Informacje o wersji aplikacji</string>
    <string name="login">Zaloguj</string>
    <string name="logout">Wyloguj</string>
    <string name="settings">Ustawienia</string>
    <string name="about_me">Profil</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="menu_home">Home</string>
    <string name="menu_tariff">Taryfikator</string>
    <string name="menu_road">Droga</string>
    <string name="menu_law">Przepisy</string>
    <string name="menu_helpers">Pomoce</string>
    <string name="menu_about">O aplikacji</string>
    <string name="uid">Uid aplikacji:</string>
    <string name="vCode">Wersja kodu:</string>
    <string name="vName">Nazwa wersji kodu:</string>
    <string name="vBase">Baza wykroczeń:</string>
    <string name="vServer">Wersje na serwerze</string>
    <string name="checkUpdate">Sprawdź aktualizacje</string>
    <string name="forceUpdateDb">Wymuś aktualizacje baz danych</string>
    <string name="forceUpdatepdf">Wymuś aktualizacje pdf</string>
    <string name="forceUpdateAsset">Wymuś aktualizacje assetów</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enviroment">Środowisko:</string>
    <string name="EnvTest">Testowe</string>
    <string name="EnvProd">Produkcyjne</string>
    <string name="EnvFeature">Beta</string>
    <string name="engine">Silnik wykroczeń:</string>
    <string name="before09">Przed wrześńiem 2022</string>
    <string name="after09">Po wrześniu 2022 (obecne)</string>
    <string name="WarnEngine">Zmiana silnika wpływa na wyświetlanie wykroczeń w aplikacji. Funkcja ta ma na celu podgląd
        wykroczeń sprzed znaczących zmian przepisów. Opcja ta przeznaczona jest głównie dla osób prowadzących czynności
        wyjaśniające sprzed zmiany przepisów. Dezaktywacja wsparcia tej funkcjonalności planowana jest w 2025 roku.
    </string>
    <string name="WarnEnv">Uwaga!! Zmiana środowiska dostępna dla dewelopera! Jeżeli udało ci się zmienić gratulacje ;),
        lecz pamiętaj wszystkie środowiska poza produkcyjnym zawierają dane testowe
    </string>
    <string name="newInTapo">Nowy w TaPo24.pl Załóż konto</string>
    <string name="hintLoginOrEmail">Wprowadź login lub email</string>
    <string name="hintPassword">Wprowadź hasło</string>
    <string name="forgotPassword">Zapomniałeś hasła?</string>
    <string name="loginToService">Zaloguj</string>
    <string name="register">Rejestracja</string>
    <string name="roadSign">Znaki drogowe</string>
    <string name="Accident">Kwalifikacja zdarzenia</string>
    <string name="ControleAlcohol">Kontrola Trzeźwości</string>
    <string name="CodeFailure">Kody usterek</string>
    <string name="CategodyDrivingLicence">Kategorie prawa jazdy</string>
    <string name="CodeDisallowedDringLicence">Kody ograniczeń prawa jazdy</string>
    <string name="OtherCountryDrivingLicence">Honorowane zagraniczne PJ</string>
    <string name="HoldingDocuments">Zatrzymywanie dokumentów</string>
    <string name="StausDrivingLicenceKSIP">Statusy Prawa Jazdy KSIP</string>
    <string name="Lights">Oświetlenie pojazdu</string>
    <string name="LightsCodeCountry">Kody homologacji</string>
    <string name="LightsFront">Reflektory</string>
    <string name="LightsOthers">Pozostałe światła</string>
    <string name="Towing">Holowanie pojazdu</string>
    <string name="uto">UTO</string>
    <string name="roadTransport">Transport drogowy</string>
    <string name="codePoints">Kody czynów</string>
    <string name="recidive">Recydywa</string>
    <string name="onHere">Badany na miejscu</string>
    <string name="fromFar">Badany oddalił się</string>
    <string name="utoElectric">Urządzenie transportu osobistego</string>
    <string name="utoStrenght">Urządzenie wspomagające ruch</string>
    <string name="utoScooter">Hulajnoga elektryczna</string>
    <string name="utoRights">Uprawnienia:</string>
    <string name="utoWhereAllowed">Poruszanie się:</string>
    <string name="utoSpeed">Prędkość:</string>
    <string name="utoProhibition">Zabrania się:</string>
    <string name="utoBechavior">Zachowanie wobec pieszego:</string>
    <string name="utoStop">Postój:</string>
    <string name="searchControl">Wyszukaj usterkę</string>
    <string name="howToCheck">Sposób sprawdzenia:</string>
    <string name="priority1">DROBNA</string>
    <string name="priority2">POWAŻNA</string>
    <string name="priority3">NIEBEZPIECZNA</string>
    <string name="prioritySelect">Wybierz priorytet:</string>
    <string name="categoryDrivingLicencetopic">Kategoria prawa jazdy:</string>
    <string name="requements">Wymagania:</string>
    <string name="rights">Uprawnienia:</string>
    <string name="Remarks">Uwagi:</string>
    <string name="signA">Znaki ostrzegawcze (A)</string>
    <string name="signB">Znaki zakazu (B)</string>
    <string name="signC">Znaki nakazu (C)</string>
    <string name="signD">Znaki informacyjne (D)</string>
    <string name="signE">Znaki kierunku i miejscowości (E)</string>
    <string name="signF">Znaki uzupełniające (F)</string>
    <string name="signP">Znaki poziome (P)</string>
    <string name="signS">Sygnały drogowe (S)</string>
    <string name="signT">Tablicznki do znaków drogowych (T)</string>
    <string name="signG">Znaki dodatkowe (G)</string>
    <string name="signR">Dodatkowe znaki szlaków rowerowych (R)</string>
    <string name="signW">Znaki (W)</string>
    <string name="signATBT">Znaki (ATBT)</string>
    <string name="searchSign">Wyszukaj znak</string>
    <string name="postalCode">Kody pocztowe</string>
    <string name="OC">Link do sprawdzenia OC w UFG</string>
    <string name="checkRights">Link do sprawdzenia uprawnień</string>
    <string name="carHistory">Link do sprawdzenia historii pojazdu</string>
    <string name="payUs">Wesprzyj nas</string>
    <string name="protocolPattern">Wzory protokołów</string>
    <string name="checkValidate">Kontrola autentyczności dokumentów</string>
    <string name="telephoneBook">Link do książki telefonicznej (Policja)</string>
    <string name="disallow12t">Link do ograniczeń ruchu pow. 12t</string>
    <string name="shop">Sklep mundurowy</string>
    <string name="spb">ŚPB</string>
    <string name="calculatorSpeed">Kalkulator prędkości</string>
    <string name="note">Notatnik</string>
    <string name="calculatorAlco">Przelicznik mn/l - ‰</string>
    <string name="blog">Blog #HoldTheLine</string>
    <string name="translator">Słowniczek</string>
    <string name="healthCreator">Kod RABATOTWOY TODO</string>
    <string name="expand">Rozwiń</string>
    <string name="colapse">Zwiń</string>
    <string name="searchCountry">Wyszukaj kraj</string>
    <string name="searchLaw">Wyszukaj plik</string>
    <string name="search">Wyszukaj</string>
    <string name="searchCodeDrivingLimits">Wprowadź kod lub nazwę ograniczenia</string>
    <string name="back">Wstecz</string>
    <string name="viewLoading">Ładowanie widoku</string>
    <string name="pleaseWait">proszę czekać</string>
    <string name="removeFav">Usuń z ulubionych</string>
    <string name="addFav">Dodaj do ulubionych</string>
    <string name="done">Gotowe</string>
    <string name="edit_list">Edytuj listę</string>
    <string name="sign_desc">Opis znaku:</string>
    <string name="more">Więcej</string>
    <string name="roadSignDetails">Szczegóły znaku</string>
    <string name="tariff">Taryfikator:</string>
    <string name="onlyFavsNotification">Silnik wyświetli tylko ulubione wykroczenia.</string>
    <string name="allNotification">Wyszukiwanie we wszystkich wykroczeniach</string>
    <string name="tariff_help_search">Wyszukiwanie wykroczeń związanych z niestosowaniem się do znaków drogowych. Celem
        odnalezienia interesującego nas wykroczenia dotyczącego znaku należy wpisać frazę np. B-1 ; B-2 ; B-10. Nie
        należy wpisywać fraz takich jak: B10 ; B01; B-01.
    </string>
    <string name="tariff_help_code">Aby odnaleźć interesujące nas wykroczenia należy wpisać kod w formacie np. A02 ;
        A10. Nie należy wpisywać formatów takich jak: A010 ; A 11.
    </string>
    <string name="tariff_help_two_type">Wyszukiwarka działa w dwóch trybach. Pierwszy tryb - online oraz drugi -
        offline. Przełączenie trybu następuje automatycznie w zależności od dostępności sieci.
    </string>
    <string name="tariff_help_online">W trybie „online” wyszukiwarka działa w sposób za dynamiczny. Dopuszcza on
        wprowadzenie szukanej frazy w sposób niedokładny. Odnalezienie wyników odbywa się za pomocą serii obliczeń
        matematycznych oraz wspomagane jest wyuczonym modelem AI. Po wpisaniu danej frazy silnik dokona sprawdzenia w
        każdym polu danego wykroczenia, pod uwagę brane są wszystkie pozycje między innymi: nazwa, kwalifikacja prawna,
        kwota czy kod czynu.
        W tym trybie wpisanie słowa, np. śnieg spowoduje odnalezienie wykroczeń, które nie zawierają w żadnym polu frazy
        „śnieg” ale powiązane są z wykroczeniami sugerującymi dane zachowanie, n. „Kierowanie pojazdem, który nie jest
        utrzymany w należyty sposób”. Silnik dopuszcza również pominięcie znaków diakrytycznych (znaki miękkie).
    </string>
    <string name="tariff_help_offline">W trybie „offline” wyszukiwarka działa w sposób statyczny. Wyszukiwana jest fraza
        znajdująca się w nazwie wykroczenia. Wpisanie słowa „śnieg” nie zwróci żadnego wyniku. Błędne wpisanie słowa,
        np. bez znaku diakrytycznego również nie zwróci żadnego wyniku.
    </string>
    <string name="tariff_help_warning">Uwaga! Aby usprawnić działanie silnika każda pozycja wyszukana za pomocą silnika
        dynamicznego zapisywana będzie w pamięci urządzenia. Zapisane w ten sposób „wyszukiwanie historyczne”
        wykorzystanie będzie do wyszukiwania statycznego w trybie offline. Przykład: wpisanie słowa „śnieg” w trybie
        online spowoduje odnalezienie danego wykroczenia. Dzięki „zapisowi historycznemu” ponowne wpisanie słowa „śnieg”
        w trybie offline spowoduje odnalezienie tego samego wykroczenia.
    </string>
    <string name="about_tariff_search">Informacje o wyszukiwarce:</string>
    <string name="offline_work">Brak połączenia z siecią. Silnik wyszukiwarki będzie działał w trybie statycznym.
    </string>
    <string name="not_implemented">NOT IMPLEMENTED YET!!! :(</string>
    <string name="enter_number">Wprowadź liczby np. przebieg.</string>
    <string name="enter_text">Wprowadź tekst</string>
    <string name="error">Błąd</string>
    <string name="back_to_home">Przejdź na stronę główną</string>
    <string name="if_again_writ_to_us">Jeżeli błąd się powtarza napisz do nas.</string>
    <string name="type_connection">Rodzaj połączenia:</string>
    <string name="wifi_and_others">WiFi oraz sieci komórkowe</string>
    <string name="only_wifi">Tylko WiFi</string>
    <string name="remember_download">Aby zapewnić spójność z obowiązującymi przepisami aplikacja może pobierać w ciągu
        działania aktualizacje przepisów, które nie powinny przekraczać 10MB. Pamiętaj, że wybierając dane sieci mogą
        zostać naliczone dodatkowe opłaty przez
        operatora w zależności od rodzaju taryfy połączenia
    </string>
    <string name="addCategory">Dodaj kategorię</string>
    <string name="showOwnCategory">Wyświetlanie własnych kategorii</string>
    <string name="showOnEndList">Na końcu listy</string>
    <string name="showOnTopList">Na początku listy</string>
</resources>