<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_tariff"
                android:icon="@drawable/book_open_reader_solid"
                android:title="@string/menu_tariff"/>
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/house_solid"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_road"
                android:icon="@drawable/road_solid"
                android:title="@string/menu_road"/>
        <item
                android:id="@+id/nav_law"
                android:icon="@drawable/gavel_solid"
                android:title="@string/menu_law"/>
        <item
                android:id="@+id/nav_helpers"
                android:icon="@drawable/life_ring_solid"
                android:title="@string/menu_helpers"/>
    </group>
</menu>