<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_info"
          android:title="@string/info_version"
          android:icon="@drawable/house_solid"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/settings"
          android:icon="@drawable/house_solid"
          android:orderInCategory="150"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/menu_about"
          android:orderInCategory="200"
          android:icon="@drawable/house_solid"
          app:showAsAction="never"/>
    <item android:id="@+id/action_login"
          android:title="@string/login"
          android:icon="@drawable/house_solid"
          android:orderInCategory="250"
          app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
          android:title="@string/logout"
          android:icon="@drawable/house_solid"
          android:orderInCategory="300"
          app:showAsAction="never"/>
</menu>