<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="pl.tapo24.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="pl.tapo24.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="pl.tapo24.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>

    <fragment
            android:id="@+id/nav_tariff"
            android:name="pl.tapo24.ui.tariff.TariffFragment"
            android:label="@string/menu_tariff"
            tools:layout="@layout/fragment_tariff"/>
    <fragment
            android:id="@+id/nav_settings"
            android:name="pl.tapo24.ui.settings.SettingsFragment"
            android:label="@string/settings"
            tools:layout="@layout/fragment_setting"/>
    <fragment
            android:id="@+id/nav_about_application"
            android:name="pl.tapo24.ui.aboutApplication.AboutApplicationFragment"
            android:label="@string/info_version"
            tools:layout="@layout/fragment_about_application"/>
</navigation>