<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/style_social_media_button"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:text="@string/type_connection"
                android:layout_width="wrap_content"
                style="@style/textStyleLarge"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupEngine"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone">
            <RadioButton
                    android:text="@string/after09"
                    android:buttonTint="@drawable/check_box"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonAfter"/>
            <RadioButton
                    android:text="@string/before09"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonBefore" android:enabled="false"/>
        </RadioGroup>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupConnectionType"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        >
            <RadioButton
                    android:text="@string/wifi_and_others"
                    android:buttonTint="@drawable/check_box"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonCell"/>
            <RadioButton
                    android:text="@string/only_wifi"
                    android:layout_width="match_parent"
                    style="@style/textStyle"
                    android:buttonTint="@drawable/check_box"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonWifi" />
        </RadioGroup>
        <TextView
                android:text="@string/remember_download"
                android:layout_width="wrap_content"
                android:background="@drawable/style_orange_container"
                style="@style/textStyle"
                android:layout_height="wrap_content" android:id="@+id/tvInfo"
                app:layout_constraintTop_toBottomOf="@id/radioGroupConnectionType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:maxLines="10" android:textAlignment="center"
        />
        <TextView
                android:text="@string/enviroment"
                style="@style/textStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEnvir"
                app:layout_constraintTop_toBottomOf="@+id/tvInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGroupEnviroment"

                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvEnvir" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            <RadioButton
                    android:text="@string/EnvProd"
                    android:buttonTint="@drawable/check_box"

                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonProduction"/>
            <RadioButton
                    android:text="@string/EnvTest"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonTest"/>
            <RadioButton
                    android:text="@string/EnvFeature"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonFeature"/>
        </RadioGroup>
        <TextView
                android:text="@string/WarnEnv"
                android:background="@drawable/style_orange_container"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvDevelop"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupEnviroment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:maxLines="5" android:textAlignment="center"
                android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>