<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/facebook_f"
                android:contentDescription="@string/nav_header_desc"
                android:id="@+id/imageViewFacebook"
                android:layout_weight="0.1"
                android:tintMode="src_in"
                android:backgroundTintMode="add"
                android:background="@drawable/style_social_media_button"
                app:tint="?attr/smallIconColor"/>
        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="0.5"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/instagram"
                android:contentDescription="@string/nav_header_desc"
                android:id="@+id/imageViewInstagram"
                android:layout_weight="0.1"
                android:tintMode="src_in"
                android:backgroundTintMode="add"
                android:background="@drawable/style_social_media_button"
                app:tint="?attr/smallIconColor"/>/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="30dp"
            android:textAlignment="center" android:fontFamily="@font/itim"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/textView"
            android:fontFamily="@font/itim"/>
</LinearLayout>